--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ body.dark-mode {
 .dark-mode .card:hover,
 .dark-mode .card1:hover {
   background-color: #333;
-  border-color: #2980b9;
+  border-color: rgb(98, 0, 255);
   box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);
 }
 
