--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ body.dark-mode {
 }
 
 .dark-mode .footer .social-icons a {
-  color: #66b2ff;
+  color: rgb(98, 0, 255);
 }
 
 .dark-mode .footer .social-icons a:hover {
