--- a/pdf.html
+++ b/pdf.html
@@ -664,6 +664,10 @@ header .more{
 body.dark-mode header .more{
   color: white;
 }
+    body.dark-mode header a{
+  text-decoration: none;
+  color: rgb(98, 0, 255);
+}
   </style>
 </head>
 <body>
