--- a/index.html
+++ b/index.html
@@ -393,6 +393,10 @@ header .more{
 body.dark-mode header .more{
   color: white;
 }
+body.dark-mode header a{
+  text-decoration: none;
+  color: rgb(98, 0, 255);
+}
   </style>
 </head>
 <body>
