--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ header span{
 
     .container {
       margin-top: 15px;
+      margin-bottom: 50px;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -164,7 +165,7 @@ header span{
     }
 .footer {
   text-align: center;
-  margin-top: 20px;
+  margin-top: px;
   margin-bottom: 200px;
 }
 
@@ -336,28 +337,63 @@ body.dark-mode {
 
 
 /*العدد الزورا*/
- .totle {
-      background: none;
-      border: 1.5px solid #cccccc;
-      border-radius: 12px;
-      padding: 20px;
-      width: 300px;
-      height: 100px;
-      cursor: pointer;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: 0.3s;
-  }
+.totle-div {
+
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -60px; /* تأكد من عدم وجود تأثير سلبي للـ margin */
+}
+.totle-div::before {
+  content: "";
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  opacity: 50%;
+  width: 50%;
+  height: 3px;           /* سُمك الحدّ */
+  pointer-events: none;  /* لا يؤثر على النقر */
+  background: linear-gradient(
+    to right,
+    transparent 0%,
+    rgb(98, 0, 255) 25%,
+    rgb(98, 0, 255) 50%,
+    rgb(98, 0, 255) 75%,
+    transparent 100%
+  );
+  border-radius: 12px 12px 0 0; /* نفس نصف القطر لو لديك */
+}
+.totle {
+    justify-content: center;
+  align-items: center;
+  display: flex;
+  background: none;
+  border-radius: 12px;
+  padding: 20px;
+  gap: 10px;
+}
+
+
 
   .numzuar, .numkdmat {
-    background: rgba(255 255 255 / 0.15);
-    padding: 15px 25px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 90px;
+    background: none;
+    display: block;
+    padding: 12px 20px;
+    width: 160px;
     border-radius: 12px;
     font-weight: 700;
     font-size: 18px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
-    gap: 8px;
     letter-spacing: 0.05em;
     transition: background-color 0.3s ease;
     cursor: default;
@@ -365,15 +401,45 @@ body.dark-mode {
 
   .numzuar:hover, .numkdmat:hover {
     background: rgba(255 255 255 / 0.3);
-  }
+    cursor: pointer;
+    transform: translateY(-5px);
+    border: rgb(98, 0, 255) solid 1px;
+    transition: 0.3s;
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 
+  }
+  body.dark-mode .numzuar{
+      background-color: #2b2b2b;
+  border-color: rgb(98, 0, 255);
+  box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
+  }
+.numzuar .fa-solid.fa-server{
+  font-size: 25px;
+  color: rgb(98, 0, 255);
+  text-align: center;
+}
+.numzuar .fa-solid.fa-hard-drive{
+  font-size: 25px;
+  color: rgb(98, 0, 255);
+  text-align: center;
+}
+.numzuar .span1{
+  font-size: 20px;
+  margin-top:15px ;
+
+}
   #visitorCount {
-    font-size: 22px;
-    color: #ffd700; /* ذهبي */
-    font-weight: 900;
-    min-width: 50px;
-    text-align: right;
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    color: rgb(98, 0, 255); /* ذهبي */
+    font-weight: bolder;
+    flex-direction:none;
+  }
+  .visitorCount {
+    font-weight: bolder;
+    font-size: 20px;
+    color: rgb(98, 0, 255); /* ذهبي */
+    font-weight: bolder;
+    flex-direction:none;
   }
 header a{
   text-decoration: none;
@@ -431,23 +497,25 @@ body.dark-mode header a{
 
 
 
-
+  </div>
+<div class="totle-div">
+</div>
 <div class="totle">
   <div class="numzuar">
-    <span>عدد الزوار: </span><span id="visitorCount">0</span>
+    <i class="fa-solid fa-server"></i>
+    <span class="span1">عدد الزوار: </span><span id="visitorCount">0</span>
   </div>
-  <div class="numkdmat">
-    <span>عدد الخدمات: +7</span>
-  </div>
-</div>
+  <div class="numzuar">
+    <i class="fa-solid fa-hard-drive"></i>
+    <span class="span1">عدد الخدمات: </span><span class="visitorCount">+7</span>
+  </div></div>
 
-  </div>
-<!-- Firebase + Script -->
+<<!-- Firebase + Script -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+  import { getDatabase, ref, onValue, get, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
-  // تكوين Firebase (استبدل هنا بالتكوين الخاص بك)
+  // تكوين Firebase
   const firebaseConfig = {
     apiKey: "AIzaSyAqAGHqN4eba9HcZzkoAzEXrcky38uh3C4",
     authDomain: "editor-abd.firebaseapp.com",
@@ -458,14 +526,14 @@ body.dark-mode header a{
     measurementId: "G-B7N4836KY4"
   };
 
-  // تهيئة التطبيق وقاعدة البيانات
+  // تهيئة Firebase
   const app = initializeApp(firebaseConfig);
   const database = getDatabase(app);
 
-  // دالة لتحريك العد
+  // دالة تحريك الرقم
   function animateCount(id, start, end, duration) {
     let range = end - start;
-    if(range === 0) return; // لا تحريك إذا العدد ثابت
+    if (range === 0) return;
     let current = start;
     let increment = end > start ? 1 : -1;
     let stepTime = Math.abs(Math.floor(duration / range));
@@ -479,15 +547,22 @@ body.dark-mode header a{
     }, stepTime);
   }
 
-  // الاستماع لتغييرات عدد الزوار في قاعدة البيانات (مثلاً عند المسار "visitorCount")
+  // المرجع للمسار
   const visitorRef = ref(database, 'visitorCount');
 
+  // عند فتح الموقع: نقرأ القيمة الحالية ونزيدها بواحد
+  get(visitorRef).then((snapshot) => {
+    let currentCount = snapshot.val() || 0;
+    set(visitorRef, currentCount + 1);
+  });
+
+  // نتابع التغييرات ونحدث الرقم المعروض
   onValue(visitorRef, (snapshot) => {
     const newCount = snapshot.val() || 0;
     const displayed = Number(document.getElementById('visitorCount').textContent.replace(/,/g, '')) || 0;
     animateCount("visitorCount", displayed, newCount, 1500);
   });
-  </script>
+</script>
 
 
 
