--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ body.dark-mode {
   text-align: center;
 }
 .numzuar .span1{
-  font-size: 20px;
+  font-size: 18px;
   margin-top:15px ;
 
 }
@@ -510,7 +510,7 @@ body.dark-mode header a{
     <span class="span1">عدد الخدمات: </span><span class="visitorCount">+7</span>
   </div></div>
 
-<<!-- Firebase + Script -->
+<!-- Firebase + Script -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
   import { getDatabase, ref, onValue, get, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
