--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@ body.dark-mode {
     text-align: center;
     cursor: pointer;
     display: flex;
+    border: 1.5px solid #cccccc;
     flex-direction: column;
     position: relative;
     height: 90px;
@@ -424,7 +425,7 @@ body.dark-mode {
   text-align: center;
 }
 .numzuar .span1{
-  font-size: 18px;
+  font-size: 14px;
   margin-top:15px ;
 
 }
