--- a/index.html
+++ b/index.html
@@ -410,9 +410,14 @@ body.dark-mode {
 
   }
   body.dark-mode .numzuar{
-      background-color: #2b2b2b;
-  border-color: rgb(98, 0, 255);
-  box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
+    border: 1.5px solid #cccccc40;
+    background-color: #2b2b2b;
+    box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
+  }
+  body.dark-mode .numzuar:hover{
+    border:  rgb(98, 0, 255) solid 1px;
+    background-color: #2b2b2b;
+    box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
   }
 .numzuar .fa-solid.fa-server{
   font-size: 25px;
