--- a/index.html
+++ b/index.html
@@ -469,13 +469,17 @@ body.dark-mode header a{
   text-decoration: none;
   color: rgb(98, 0, 255);
 }
-.icons{
-  display: flex;
-  gap: 8px;
-  margin-left: -60px;
+.icons {
   align-items: center;
-  margin-right: 25px;
+  justify-content: center;
+  position: fixed;
+  left: 20px;
+  display: flex;
+  gap: 10px;
+  z-index: 999;
 }
+
+
     .msgs {
       top: 30px;
       left: 20px;
