--- a/pdf.html
+++ b/pdf.html
@@ -669,12 +669,14 @@ body.dark-mode header .more{
   color: white;
 }
 
-.icons{
-  display: flex;
-  gap: 8px;
-  margin-left: -60px;
+.icons {
   align-items: center;
-  margin-right: 25px;
+  justify-content: center;
+  position: fixed;
+  left: 20px;
+  display: flex;
+  gap: 10px;
+  z-index: 999;
 }
     .msgs {
       top: 30px;
